--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "pimple/pimple": "~3.0"
   },
   "autoload": {
     "psr-4": { "": "src/" }
