--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
       "email": "fiedsch@ja-eh.at"
     }
   ],
+  "support": {
+    "issues":"https://github.com/fiedsch/datamanagement/issues",
+    "source":"https://github.com/fiedsch/datamanagement"
+  }
   "require": {
     "php": ">=5.6",
     "pimple/pimple": "~3.0"
