--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,12 @@
   "require": {
     "php": ">=5.6",
     "ext-mbstring": "*",
-    "pimple/pimple": "~3.0",
+    "pimple/pimple": "~3.0"
+  },
+  "require-dev": {
+    "symfony/yaml": "~3.4 || ~4.2"
+  },
+  "suggest": {
     "symfony/yaml": "~3.4 || ~4.2"
   },
   "autoload": {
