--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require": {
     "php": ">=5.6",
     "ext-mbstring": "*",
-    "pimple/pimple": "~3.0"
+    "pimple/pimple": "~3.0",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {"": "src/"}
