--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,14 @@
     "source": "https://github.com/fiedsch/datamanagement"
   },
   "require": {
-    "php": ">=5.6",
+    "php": "^7.4 || ^8.0",
     "ext-mbstring": "*",
+    "ext-json": "*",
     "pimple/pimple": "~3.0",
-    "ext-json": "*"
+    "league/csv": "^9.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {"": "src/"}
