--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,10 @@
     "source": "https://github.com/fiedsch/datamanagement"
   },
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.0",
     "ext-mbstring": "*",
     "ext-json": "*",
+    "ext-ctype": "*",
     "pimple/pimple": "~3.0",
     "league/csv": "^9.6"
   },
