--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,11 @@
     "league/csv": "^9.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0"
+    "phpunit/phpunit": "^9.0",
+    "symfony/var-dumper": "^v6.4"
+  },
+  "conflict": {
+    "league/csv": ">=9.12"
   },
   "autoload": {
     "psr-4": {"": "src/"}
